Added resources gdg granada

--- a/public/bower.json
+++ b/public/bower.json
@@ -1,7 +1,8 @@
 {
-  "name": "projectcerium",
+  "name": "ioextendedgranada",
   "authors": [
-    "limhenry <henrylim.everything@gmail.com>"
+    "limhenry <henrylim.everything@gmail.com>",
+    "GDG Granada Team <info@gdggranada.com>"
   ],
   "description": "",
   "main": "",
