--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Google Cloud Platform Next Extended 2016 Kuala Lumpur",
-  "short_name": "GCP Next Extended 2016 KL",
+  "name": "IO Extended 2016 Granada",
+  "short_name": "IO Extended 2016 Granada",
   "start_url": "./?utm_source=web_app_manifest",
   "display": "standalone",
   "theme_color": "#095DB1",
